--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* 
+Author Name	: Bholu Singh
+Website		: Free Projects1 
+File Name 	: style.css
+*/
+
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 *
 {
@@ -19,6 +25,7 @@ body{
 	background: #e3f2fd;
 	display: flex;
 	flex-direction: column;
+	border-radius: 5px;
 	box-shadow: 0 5px 15px rgba(0,0,0,0.1);
 }
 .container h3{
@@ -36,6 +43,7 @@ body{
 	font-size: 18px;
 	border: none;
 	outline: none;
+	border-radius: 5px;
 }
 .container p{
 	display: flex;
